mac: always use Views confirm bubble

The confirm bubble is used only for the "Ask Google for Spelling Suggestions?"
prompt. The Cocoa bubble has some visual defects, but the Views one looks quite
a bit better.

Bug: 747203
Change-Id: I7876819a1b4dd96d32f4491ac67187be5c941c3c